--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "private": false,
   "scripts": {
-    "build": "gulp --production"
+    "build": "gulp build"
   },
   "keywords": [
     "gdy",
@@ -25,6 +25,14 @@
     "@sentry/integrations": "^5.15.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-strip-debug": "^3.0.0",
+    "gulp-terser": "^1.2.0",
+    "gulp-uglify": "^3.0.2",
     "vue": "^2.6.11"
   }
 }
